@@ -5,6 +5,7 @@
   * add optional `mode` argument to `util.sum_indices()`
   * add [Dubner's conjecture](../examples/dubner.rst) (in memory of Harvey
     Dubner)
+  * add [dynamically growing sieve](../examples/dyn_sieve.rst)
 
 
 2025-08-12   3.6.1:
